@@ -97,6 +97,8 @@ need the following software:
   you want to enable ovs-vswitchd and other utilities to use DNS names when
   specifying OpenFlow and OVSDB remotes. If unbound library is already
   installed, then Open vSwitch will automatically build with support for it.
+  The environment variable OVS_RESOLV_CONF can be used to specify DNS server
+  configuration file (the default file on Linux is /etc/resolv.conf).
 
 On Linux, you may choose to compile the kernel module that comes with the Open
 vSwitch distribution or to use the kernel module built into the Linux kernel
